--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/c433f08a85.js" crossorigin="anonymous"></script>
     <title>Whazaa! Game Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
-    
+    <header class="header">
+        <img src="assets/img/logo-whazaa-game-store.svg" alt="Logo Whazaa! Game Store" width="70" />
+        <div class="menu-container">
+            <nav>
+                <a href="saiba-mais.html" target="_blank">Saiba mais</a>
+            </nav>
+            <button id="bttn-cart">
+                <i class="fas fa-shopping-bag"></i>
+                <span class="badge">2</span>
+            </button>
+        </div>
+    </header>
 </body>
 </html>
