chore: container media implement

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,18 +12,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
+
 <body>
     <header class="header">
-        <img src="assets/img/logo-whazaa-game-store.svg" alt="Logo Whazaa! Game Store" width="70" />
-        <div class="menu-container">
-            <nav>
-                <a href="saiba-mais.html" target="_blank">Saiba mais</a>
-            </nav>
-            <button id="bttn-cart">
-                <i class="fas fa-shopping-bag"></i>
-                <span class="badge">2</span>
-            </button>
+        <div class="container">
+            <img src="assets/img/logo-whazaa-game-store.svg" alt="Logo Whazaa! Game Store" width="70" />
+            <div class="menu-container">
+                <nav>
+                    <a href="saiba-mais.html" target="_blank">Saiba mais</a>
+                </nav>
+                <button id="bttn-cart">
+                    <i class="fas fa-shopping-bag"></i>
+                    <span class="badge">2</span>
+                </button>
+            </div>
         </div>
     </header>
 </body>
+
 </html>
