--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <img src="assets/img/logo-whazaa-game-store.svg" alt="Logo Whazaa! Game Store" width="70" />
+            <img class="logo" src="assets/img/logo-whazaa-game-store.svg" alt="Logo Whazaa! Game Store" width="70" />
             <div class="menu-container">
                 <nav>
                     <a href="saiba-mais.html" target="_blank">Saiba mais</a>
