feat: implement products

--- a/index.html
+++ b/index.html
@@ -28,6 +28,59 @@
             </div>
         </div>
     </header>
+    <main class="container">
+        <h1>Produtos</h1>
+        <section>
+            <h2>Jogos</h2>
+            <div id="products-grid">
+                <article class="card">
+                    <img src="assets/img/produtos/ps5-horizon-forbidden-west.jpg"
+                        alt="Horizon Forbidden West, para Playstation 5" width="190" height="170" />
+                    <div class="card-content">
+                        <h3>Horizon Forbidden West</h3>
+                        <p class="card-price">R$ 270,00</p>
+                        <button class="btn btn-main btn-block">Comprar</button>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="assets/img/produtos/ps5-spider-man-miles-morales.jpg"
+                        alt="Spider Man Miles Morales, para Playstation 5" width="190" height="170" />
+                    <div class="card-content">
+                        <h3>Spider Man - Miles Morales</h3>
+                        <p class="card-price">R$ 250,00</p>
+                        <button class="btn btn-main btn-block">Comprar</button>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="assets/img/produtos/ps5-returnal.jpg"
+                        alt="Returnal, para Playstation 5" width="190" height="170" />
+                    <div class="card-content">
+                        <h3>Returnal</h3>
+                        <p class="card-price">R$ 200,00</p>
+                        <button class="btn btn-main btn-block">Comprar</button>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="assets/img/produtos/ps5-uncharted-colection-remasterizado.jpg"
+                        alt="Uncharted Coleção Legado dos Ladrões Remasterizado, para Playstation 5" width="190" height="170" />
+                    <div class="card-content">
+                        <h3>Uncharted Colecão Legado dos Ladrões Remasterizado</h3>
+                        <p class="card-price">R$ 200,00</p>
+                        <button class="btn btn-main btn-block">Comprar</button>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section>
+            <h2>Acessórios</h2>
+        </section>
+        <section>
+            <h2>Consoles</h2>
+        </section>
+
+
+    </main>
 </body>
 
 </html>
