fix: change grid id to class

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Produtos</h1>
         <section>
             <h2>Jogos</h2>
-            <div id="products-grid">
+            <div class="products-grid">
                 <article class="card">
                     <img src="assets/img/produtos/ps5-horizon-forbidden-west.jpg"
                         alt="Horizon Forbidden West, para Playstation 5" width="190" height="170" />
@@ -44,9 +44,9 @@
                 </article>
                 <article class="card">
                     <img src="assets/img/produtos/ps5-spider-man-miles-morales.jpg"
-                        alt="Spider Man Miles Morales, para Playstation 5" width="190" height="170" />
+                        alt="Spider-Man Miles Morales, para Playstation 5" width="190" height="170" />
                     <div class="card-content">
-                        <h3>Spider Man - Miles Morales</h3>
+                        <h3>Spider-Man Miles Morales</h3>
                         <p class="card-price">R$ 250,00</p>
                         <button class="btn btn-main btn-block">Comprar</button>
                     </div>
