feat: implement footer

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     </div>
                 </article>
                 <article class="card">
-                    <img src="assets/img/produtos/ps5-returnal.jpg"
-                        alt="Returnal, para Playstation 5" width="190" height="170" />
+                    <img src="assets/img/produtos/ps5-returnal.jpg" alt="Returnal, para Playstation 5" width="190"
+                        height="170" />
                     <div class="card-content">
                         <h3>Returnal</h3>
                         <p class="card-price">R$ 200,00</p>
@@ -62,7 +62,8 @@
                 </article>
                 <article class="card">
                     <img src="assets/img/produtos/ps5-uncharted-colection-remasterizado.jpg"
-                        alt="Uncharted Coleção Legado dos Ladrões Remasterizado, para Playstation 5" width="190" height="170" />
+                        alt="Uncharted Coleção Legado dos Ladrões Remasterizado, para Playstation 5" width="190"
+                        height="170" />
                     <div class="card-content">
                         <h3>Uncharted Colecão Legado dos Ladrões Remasterizado</h3>
                         <p class="card-price">R$ 200,00</p>
@@ -81,6 +82,13 @@
 
 
     </main>
+    <footer class="footer">
+        <p>Fale conosco pelo Whatsapp!</p>
+        <a href="https://api.whatsapp.com/send/?phone=5581999999999&text=Ol%C3%A1,%20quero%20falar%20sobre%20jogos!" target="_blank">
+            <i class="fab fa-whatsapp-square"></i>
+            (81) 99999-9999
+        </a>
+    </footer>
 </body>
 
 </html>
