feat: implement cart page

--- a/index.html
+++ b/index.html
@@ -84,11 +84,21 @@
     </main>
     <footer class="footer">
         <p>Fale conosco pelo Whatsapp!</p>
-        <a href="https://api.whatsapp.com/send/?phone=5581999999999&text=Ol%C3%A1,%20quero%20falar%20sobre%20jogos!" target="_blank">
+        <a href="https://api.whatsapp.com/send/?phone=5581999999999&text=Ol%C3%A1,%20quero%20falar%20sobre%20jogos!"
+            target="_blank">
             <i class="fab fa-whatsapp-square"></i>
             (81) 99999-9999
         </a>
     </footer>
+    <aside class="cart-sidebar">
+        <button id="bttn-close-cart">
+            <i class="fas fa-times"></i>
+        </button>
+        <div id="empty-cart">
+            <i class="fas fa-shopping-bag"></i>
+            <p class="h2">Sua sacola está vazia</p>
+        </div>
+    </aside>
 </body>
 
 </html>
