--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         alt="Horizon Forbidden West, para Playstation 5" width="190" height="170" />
                     <div class="card-content">
                         <h3>Horizon Forbidden West</h3>
-                        <p class="card-price">R$ 270,00</p>
+                        <p class="price">R$ 270,00</p>
                         <button class="btn btn-main btn-block">Comprar</button>
                     </div>
                 </article>
@@ -47,7 +47,7 @@
                         alt="Spider-Man Miles Morales, para Playstation 5" width="190" height="170" />
                     <div class="card-content">
                         <h3>Spider-Man Miles Morales</h3>
-                        <p class="card-price">R$ 250,00</p>
+                        <p class="price">R$ 250,00</p>
                         <button class="btn btn-main btn-block">Comprar</button>
                     </div>
                 </article>
@@ -56,7 +56,7 @@
                         height="170" />
                     <div class="card-content">
                         <h3>Returnal</h3>
-                        <p class="card-price">R$ 200,00</p>
+                        <p class="price">R$ 200,00</p>
                         <button class="btn btn-main btn-block">Comprar</button>
                     </div>
                 </article>
@@ -66,7 +66,7 @@
                         height="170" />
                     <div class="card-content">
                         <h3>Uncharted Colecão Legado dos Ladrões Remasterizado</h3>
-                        <p class="card-price">R$ 200,00</p>
+                        <p class="price">R$ 200,00</p>
                         <button class="btn btn-main btn-block">Comprar</button>
                     </div>
                 </article>
@@ -94,9 +94,35 @@
         <button id="bttn-close-cart">
             <i class="fas fa-times"></i>
         </button>
-        <div id="empty-cart">
+        <!-- <div id="empty-cart">
             <i class="fas fa-shopping-bag"></i>
             <p class="h2">Sua sacola está vazia</p>
+        </div> -->
+        <div id="full-cart">
+            <p class="h2">Resumo do Pedido:</p>
+            <ul>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/ps5-horizon-forbidden-west.jpg"
+                        alt="Horizon Forbidden West, para Playstation 5" width="70" height="70" />
+                    <div>
+                        <p class="h4">Horizon Forbidden West</p>
+                        <p class="price">R$ 270,00</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1" />
+                    <button class="fas fa-trash-alt"></button>
+                </li>
+                <li class="cart-item">
+                    <img src="assets/img/produtos/ps5-spider-man-miles-morales.jpg"
+                        alt="Spider-Man Miles Morales, para Playstation 5" width="70" height="70" />
+                    <div>
+                        <p class="h4">Spider-Man Miles Morales</p>
+                        <p class="price">R$ 250,00</p>
+                    </div>
+                    <input class="form-input" type="number" min="0" value="1" />
+                    <button class="fas fa-trash-alt"></button>
+                </li>
+                <li></li>
+            </ul>
         </div>
     </aside>
 </body>
