chore: cart config finish

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="card-content">
                         <h3>Horizon Forbidden West</h3>
                         <p class="price">R$ 270,00</p>
-                        <button class="btn btn-main btn-block">Comprar</button>
+                        <button class="bttn bttn-main bttn-block">Comprar</button>
                     </div>
                 </article>
                 <article class="card">
@@ -48,7 +48,7 @@
                     <div class="card-content">
                         <h3>Spider-Man Miles Morales</h3>
                         <p class="price">R$ 250,00</p>
-                        <button class="btn btn-main btn-block">Comprar</button>
+                        <button class="bttn bttn-main bttn-block">Comprar</button>
                     </div>
                 </article>
                 <article class="card">
@@ -57,7 +57,7 @@
                     <div class="card-content">
                         <h3>Returnal</h3>
                         <p class="price">R$ 200,00</p>
-                        <button class="btn btn-main btn-block">Comprar</button>
+                        <button class="bttn bttn-main bttn-block">Comprar</button>
                     </div>
                 </article>
                 <article class="card">
@@ -67,7 +67,7 @@
                     <div class="card-content">
                         <h3>Uncharted Colecão Legado dos Ladrões Remasterizado</h3>
                         <p class="price">R$ 200,00</p>
-                        <button class="btn btn-main btn-block">Comprar</button>
+                        <button class="bttn bttn-main bttn-block">Comprar</button>
                     </div>
                 </article>
             </div>
@@ -123,6 +123,18 @@
                 </li>
                 <li></li>
             </ul>
+            <div class="cart-total">
+                <p class="h2">Total</p>
+                <p>R$ 520,00</p>
+            </div>
+            <div>
+                <button class="bttn bttn-main-outline bttn-block">
+                    Adicionar mais Produtos
+                </button>
+                <button class="bttn bttn-main bttn-block">
+                    Concluir Pedido
+                </button>
+            </div>
         </div>
     </aside>
 </body>
