feat: open/closesidebar js function

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <p>R$ 520,00</p>
             </div>
             <div>
-                <button class="bttn bttn-main-outline bttn-block">
+                <button class="bttn bttn-main-outline bttn-block" id="add-more">
                     Adicionar mais Produtos
                 </button>
                 <button class="bttn bttn-main bttn-block">
@@ -137,6 +137,7 @@
             </div>
         </div>
     </aside>
+    <script src="assets/js/scripts.js"></script>
 </body>
 
 </html>
