feat: start mock api config and fetch request

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main class="container">
         <h1>Produtos</h1>
-        <section>
+        <!-- <section>
             <h2>Jogos</h2>
             <div class="products-grid">
                 <article class="card">
@@ -73,7 +73,7 @@
             </div>
         </section>
 
-        <section>
+        <section> -->
             <h2>Acessórios</h2>
         </section>
         <section>
@@ -102,7 +102,7 @@
             <p class="h2">Resumo do Pedido:</p>
             <ul>
                 <li class="cart-item">
-                    <img src="assets/img/produtos/ps5-horizon-forbidden-west.jpg"
+                    <img src="assets/img/produtos/jogos/ps5-horizon-forbidden-west.jpg"
                         alt="Horizon Forbidden West, para Playstation 5" width="70" height="70" />
                     <div>
                         <p class="h4">Horizon Forbidden West</p>
@@ -112,7 +112,7 @@
                     <button class="fas fa-trash-alt"></button>
                 </li>
                 <li class="cart-item">
-                    <img src="assets/img/produtos/ps5-spider-man-miles-morales.jpg"
+                    <img src="assets/img/produtos/jogos/ps5-spider-man-miles-morales.jpg"
                         alt="Spider-Man Miles Morales, para Playstation 5" width="70" height="70" />
                     <div>
                         <p class="h4">Spider-Man Miles Morales</p>
