chore: implement products fetch

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     </header>
     <main class="container">
         <h1>Produtos</h1>
+        
+        <div id="groups-root">
+            <i class="fa-solid fa-gamepad fa-flip loading-products"></i>
+        </div>
         <!-- <section>
             <h2>Jogos</h2>
             <div class="products-grid">
@@ -73,12 +77,12 @@
             </div>
         </section>
 
-        <section> -->
+        <section>
             <h2>Acessórios</h2>
         </section>
         <section>
             <h2>Consoles</h2>
-        </section>
+        </section> -->
 
 
     </main>
