feat: checkout request screen init

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                 <button class="bttn bttn-main-outline bttn-block" id="add-more">
                     Adicionar mais Produtos
                 </button>
-                <button class="bttn bttn-main bttn-block">
+                <a href="concluir-pedido.html" class="bttn bttn-main bttn-block">
                     Concluir Pedido
-                </button>
+                </a>
             </div>
         </div>
     </aside>
