--- a/concluir-pedido.html
+++ b/concluir-pedido.html
@@ -30,39 +30,42 @@
     </header>
     <main class="container">
         <h1>Concluir Pedido</h1>
-        <form id="form-checkout">
+        <form id="form-checkout" method="get" action=".">
             <div class="form-group">
                 <label for="input-name">Nome</label>
-                <input type="text" class="form-input" placeholder="Digite seu Nome" id="input-name">
+                <input type="text" class="form-input" placeholder="Digite seu Nome" id="input-name" required />
             </div>
             <div class="form-group">
                 <label for="input-phone">Telefone</label>
-                <input type="text" class="form-input" placeholder="(99) 99999-9999" id="input-phone">
+                <input type="tel" class="form-input" placeholder="(81)99999-9999" id="input-phone" required />
             </div>
             <div class="form-group">
                 <label for="input-cep">CEP</label>
-                <input type="text" class="form-input" placeholder="99999-999" id="input-cep">
+                <input name="cep" type="text" id="input-cep" class="form-input" size="10" maxlength="9"
+                    placeholder="99999999" onblur="pesquisacep(this.value)" required />
             </div>
             <div class="form-group">
                 <label for="input-address">Endereço</label>
-                <input type="text" class="form-input" placeholder="Rua, Avenida, etc." id="input-address">
+                <input name="adress" type="text" class="form-input" placeholder="Rua, Avenida, etc." size="60"
+                    id="input-address" required />
             </div>
             <div id="form-row">
+
+                <div class="form-group">
+                    <label for="input-neighborhood">Bairro</label>
+                    <input type="text" class="form-input" id="input-neighborhood" required />
+                </div>
+                <div class="form-group">
+                    <label for="input-city">Cidade</label>
+                    <input type="text" class="form-input" id="input-city" required />
+                </div>
                 <div class="form-group">
                     <label for="input-number">Número</label>
-                    <input type="text" class="form-input" id="input-number">
+                    <input type="text" class="form-input" id="input-number" required />
                 </div>
                 <div class="form-group">
                     <label for="input-complement">Complemento</label>
                     <input type="text" class="form-input" id="input-complement">
-                </div>
-                <div class="form-group">
-                    <label for="input-neighborhood">Bairro</label>
-                    <input type="text" class="form-input" id="input-neighborhood">
-                </div>
-                <div class="form-group">
-                    <label for="input-city">Cidade</label>
-                    <input type="text" class="form-input" id="input-city">
                 </div>
             </div>
 
@@ -93,6 +96,7 @@
             </div>
         </div>
     </aside>
+    <script src="https://unpkg.com/imask"></script>
     <script src="assets/js/scripts.js"></script>
 </body>
 
