feat/fix: saiba-mais init & overall minor fixes

--- a/concluir-pedido.html
+++ b/concluir-pedido.html
@@ -16,7 +16,9 @@
 <body>
     <header class="header concluir">
         <div class="container">
-            <img class="logo" src="assets/img/logo-whazaa-game-store.svg" alt="Logo Whazaa! Game Store" width="70" />
+            <nav>
+                <a href="/"><img class="logo" src="assets/img/logo-whazaa-game-store.svg" alt="Logo Whazaa! Game Store" width="70" /></a>
+            </nav>
             <div class="menu-container">
                 <nav>
                     <a href="saiba-mais.html" target="_blank">Saiba mais</a>
