--- a/saiba-mais.html
+++ b/saiba-mais.html
@@ -6,24 +6,131 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
     <section class="text-center bg-dark text-white py-3">
-        <img src="./assets/img/logo-whazaa-game-store.svg" alt="Logo Whazaa! Game Store" class="mt-5 mb-3" width="150">
+        <nav>
+            <a href="/"><img src="./assets/img/logo-whazaa-game-store.svg" alt="Logo Whazaa! Game Store" class="mt-5 mb-3" width="150"></a>
+        </nav>
         <h1>Conheça a Whazaa!</h1>
         <h2 class="mb-5">Divirta-se como nunca com nossos jogos!</h2>
     </section>
     <section class="py-5 bg-secondary text-light">
-        <h2 class="text-center">Quem somos</h2>
+        <h2 class="text-center mb-4">Quem somos</h2>
         <div class="container">
-            <img src="./assets/img/produtos/consoles/ps5-console.jpg" alt="Console Playstation 5" class="img-fluid w-100 rounded mb-3">
-            <p class="fw-semibold">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse provident numquam tempore aliquam quod consectetur exercitationem culpa odio cum? Nemo eligendi cum quae vero rerum dolorem illo voluptatibus hic minima?</p>
-            <p class="fw-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, assumenda!</p>
-            <a href="/" class="btn btn-primary">Peça pela Loja Virtual</a>
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <img src="./assets/img/produtos/consoles/ps5-console.jpg" alt="Console Playstation 5"
+                        class="img-fluid w-100 rounded mb-3">
+                </div>
+                <div class="col-12 col-sm-6 ">
+                    <p class="fw-semibold">Lorem, ipsum dolor sit amet
+                        consectetur adipisicing elit. Esse provident numquam tempore aliquam quod consectetur
+                        exercitationem culpa odio cum? Nemo eligendi cum quae
+                        vero rerum dolorem illo voluptatibus hic minima?</p>
+                    <p class="fw-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, assumenda!
+                    </p>
+                    <a href="/" class="btn btn-primary">Peça pela Loja Virtual</a>
+                </div>
+            </div>
         </div>
     </section>
+    <section class="bg-danger bg-gradient text-white pt-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Ótima localização para o seu Farm!</h2>
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-6 col-xl-5">
+                    <p class="fw-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, totam.
+                    </p>
+
+                    <p class="fw-semibold">Venha como quiser, temos estacionamento e bicicletário! Entre em contato pelo
+                        whatsapp no <a href="tel:+5581999999999" class="text-white">(81) 99999-9999</a> e agende seu
+                        playtest!</p>
+                </div>
+                <div class="col-12 col-sm-6 col-xl-5">
+                    <div class="ratio ratio-16x9">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Wr4PGa1sHFQ"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay;clipboard-write; encrypted-media; gyroscope;picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <iframe class="w-100 d-block mt-5"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7900.8133433500725!2d-34.88854077604129!3d-8.059934629158295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18c0df5b07fd%3A0x1fed608dee608f31!2sBoa%20Vista%2C%20Recife%20-%20PE%2C%2050030-230!5e0!3m2!1spt-BR!2sbr!4v1658558819671!5m2!1spt-BR!2sbr"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <section class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Dúvidas Frequentes</h2>
+            <div class="accordion">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                            Vocês fazem entregas?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos provident quae aperiam animi accusamus neque ipsa fugit, veritatis, qui debitis sint incidunt. Rem magni placeat aut consequuntur officia cupiditate sint!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            É preciso fazer agendamento prévio?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos provident quae aperiam animi accusamus neque ipsa fugit, veritatis, qui debitis sint incidunt. Rem magni placeat aut consequuntur officia cupiditate sint!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Posso retirar o pedido na loja?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos provident quae aperiam animi accusamus neque ipsa fugit, veritatis, qui debitis sint incidunt. Rem magni placeat aut consequuntur officia cupiditate sint!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            Abre aos fins de semana?
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos provident quae aperiam animi accusamus neque ipsa fugit, veritatis, qui debitis sint incidunt. Rem magni placeat aut consequuntur officia cupiditate sint!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
