--- a/saiba-mais.html
+++ b/saiba-mais.html
@@ -61,10 +61,7 @@
                 </div>
             </div>
         </div>
-        <iframe class="w-100 d-block mt-5"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7900.8133433500725!2d-34.88854077604129!3d-8.059934629158295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18c0df5b07fd%3A0x1fed608dee608f31!2sBoa%20Vista%2C%20Recife%20-%20PE%2C%2050030-230!5e0!3m2!1spt-BR!2sbr!4v1658558819671!5m2!1spt-BR!2sbr"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="w-100 d-block mt-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7900.8133433500725!2d-34.88854077604129!3d-8.059934629158295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18c0df5b07fd%3A0x1fed608dee608f31!2sBoa%20Vista%2C%20Recife%20-%20PE%2C%2050030-230!5e0!3m2!1spt-BR!2sbr!4v1658558819671!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <section class="py-5">
         <div class="container">
@@ -128,6 +125,7 @@
                 </div>
             </div>
     </section>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
